Add logo and container styles to the left menu in the Spotify Web layout

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <div class="wrapper debug">
         <div class="top d-flex">
             <div class="left_menu">
-
+                <div class="container_left">
+                    <img id="logo_big" src="./img/logo.svg" alt="logo.png">
+                </div>
             </div>
             <div class="right_menu">
                 <div class="upgrade">
