--- a/index.html
+++ b/index.html
@@ -12,57 +12,56 @@
         <div class="top d-flex">
             <div class="left_menu">
                 <div class="container_left">
-                        <div>
-                            <img id="logo_big" src="./img/logo.svg" alt="logo.png">
-                            <img id="logo_small" src="./img/logo-small.svg" alt="logosmall.svg">
-                            <ul class="nav">
-                                <li class="selected_L">
-                                    <img src="./img/home.svg" alt="home.svg"> 
+                    <div>
+                        <img id="logo_big" src="./img/logo.svg" alt="logo.png">
+                        <img id="logo_small" src="./img/logo-small.svg" alt="logosmall.svg">
+                        <ul class="nav">
+                            <li class="selected_L">
+                                <img src="./img/home.svg" alt="home.svg"> 
                                     <span>Home</span>
-                                </li>
+                            </li>
                             
-                                <li>
-                                    <img src="./img/search.svg" alt="home.svg"> 
+                            <li>
+                                <img src="./img/search.svg" alt="home.svg"> 
                                     <span>Search</span>
-                                </li>
+                            </li>
                             
-                                <li>
-                                    <img src="./img/libreria.svg" alt="home.svg"> 
+                            <li>
+                                <img src="./img/libreria.svg" alt="home.svg"> 
                                     <span>La tua libreria</span>
-                                </li>
-                            </ul>
-                            <h4>PLAYLIST</h4>
-                            <div class=" new_playlist">
-                                <i class="fa-solid fa-square-plus fa-2xl" style="color: #a3a3a3"></i>
+                            </li>
+                        </ul>
+                        <h4>PLAYLIST</h4>
+                        <div class=" new_playlist">
+                            <i class="fa-solid fa-square-plus fa-2xl" style="color: #a3a3a3"></i>
                                 <span>&nbsp; Crea Playlist</span>
-                            </div>
-                            <ul class="playlist">
-                                <li>Nome Playlist</li>
-                                <li>Nome Playlist</li>
-                                <li>Nome Playlist</li>
-                                <li>Nome Playlist</li>
-                                <li>Nome Playlist</li>
-                                <li>Nome Playlist</li>
-                                <li>Nome Playlist</li>
-                            </ul>   
                         </div>
-                        <div class="account">
-                            <div class="d-flex download">
-                                <img id="download" src="./img/download.svg" alt="download.svg">
-                                <span>Installa app</span>
-                            </div>
-                            <hr>
-                            <div class="user">
-                                <img src="./img/profile.svg" alt="user.png">
-                                <h4>John Doe</h4>
-                            </div>
+                        <ul class="playlist">
+                            <li>Nome Playlist</li>
+                            <li>Nome Playlist</li>
+                            <li>Nome Playlist</li>
+                            <li>Nome Playlist</li>
+                            <li>Nome Playlist</li>
+                            <li>Nome Playlist</li>
+                            <li>Nome Playlist</li>
+                        </ul>   
+                    </div>
+                    <div class="account">
+                        <div class="d-flex download">
+                            <img id="download" src="./img/download.svg" alt="download.svg">
+                            <span>Installa app</span>
                         </div>
-
+                        <hr>
+                        <div class="user">
+                            <img src="./img/profile.svg" alt="user.png">
+                            <h4>John Doe</h4>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="right_menu">
-                <div class="upgrade">
-
+                <div class="upgrade relative">
+                    <button>EFFETTUA L'UPGRADE</button>
                 </div>
                 <div class="main">
 
