--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Spotify Web</title>
 </head>
 <body>
-    <div class="wrapper debug">
+    <div class="wrapper">
         <div class="top d-flex">
             <div class="left_menu">
                 <div class="container_left">
@@ -64,7 +64,17 @@
                     <button>EFFETTUA L'UPGRADE</button>
                 </div>
                 <div class="main">
-
+                    <div class="menu">
+                        <ul class="d-flex">
+                            <li id="selected_B">IN EVIDENZA</li>
+                            <li>PODCAST</li>
+                            <li>CLASSIFICHE</li>
+                            <li>GENERI E MOOD</li>
+                            <li>NUOVE USCITE</li>
+                            <li>SCOPRI</li>
+                        </ul>
+                    </div>
+  
                 </div>
             </div>
         </div>
