Adjust layout styles for upgrade section and left menu, including height adjustments and class updates

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="top d-flex">
             <div class="left_menu">
                 <div class="container_left">
-                    <div>
+                    <div class="top_left">
                         <img id="logo_big" src="./img/logo.svg" alt="logo.png">
                         <img id="logo_small" src="./img/logo-small.svg" alt="logosmall.svg">
                         <ul class="nav">
@@ -65,7 +65,7 @@
                 </div>
                 <div class="main">
                     <div class="menu">
-                        <ul class="d-flex">
+                        <ul class="categories d-flex">
                             <li id="selected_B">IN EVIDENZA</li>
                             <li>PODCAST</li>
                             <li>CLASSIFICHE</li>
@@ -74,7 +74,9 @@
                             <li>SCOPRI</li>
                         </ul>
                     </div>
-  
+                    <!-- <div class="music">
+                        <h2>CREATO PER JOHN DOE</h2>
+                    </div> -->
                 </div>
             </div>
         </div>
