Add responsive music section with recently played playlists and styling

--- a/index.html
+++ b/index.html
@@ -74,6 +74,80 @@
                             <li>SCOPRI</li>
                         </ul>
                     </div>
+                    <div class="music">
+                        <div class="history">
+                            <h2>Recently played</h2>
+                            <div class="row d-flex">
+                                <div class="col-2">
+                                    <div class="card">
+                                        <div class="playlist">
+                                            <img src="/img/metal_lifting.jpg" alt="playlist.jpg">
+                                        </div>
+                                        <div class="info">
+                                            <h3>Heavy Metal</h3>
+                                            <span class="singer">Subtitle</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-2">
+                                    <div class="card">
+                                        <div class="playlist">
+                                            <img src="/img/stranger.jpeg" alt="playlist.jpg">
+                                        </div>
+                                        <div class="info">
+                                            <h3>Stranger Things, Vol.1 (A Netflix Original Series Soundtrack)</h3>
+                                            <span class="singer">Kyle Dixon & Michael Stein</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-2">
+                                    <div class="card">
+                                        <div class="playlist">
+                                            <img src="/img/aquietplace.jpeg" alt="playlist.jpg">
+                                        </div>
+                                        <div class="info">
+                                            <h3>A quiet place</h3>
+                                            <span class="singer">Subtitle</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-2">
+                                    <div class="card">
+                                        <div class="playlist">
+                                            <img src="/img/split.jpeg" alt="playlist.jpg">
+                                        </div>
+                                        <div class="info">
+                                            <h3>Split</h3>
+                                            <span class="singer">Subtitle</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-2">
+                                    <div class="card">
+                                        <div class="playlist">
+                                            <img src="/img/cure.jpeg" alt="playlist.jpg">
+                                        </div>
+                                        <div class="info">
+                                            <h3>A cure for wellness</h3>
+                                            <span class="singer">Subtitle</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-2">
+                                    <div class="card">
+                                        <div class="playlist">
+                                            <img src="/img/sinister.jpeg" alt="playlist.jpg">
+                                        </div>
+                                        <div class="info">
+                                            <h3>Sinister</h3>
+                                            <span class="singer">Subtitle</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
                     <!-- <div class="music">
                         <h2>CREATO PER JOHN DOE</h2>
                     </div> -->
