Add responsive layout for recently played playlists and popular artists section

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <div class="history">
                             <h2>Recently played</h2>
                             <div class="row d-flex">
-                                <div class="col-2">
+                                <div class="col-2 col-3-md">
                                     <div class="card">
                                         <div class="playlist">
                                             <img src="/img/metal_lifting.jpg" alt="playlist.jpg">
@@ -89,7 +89,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-2">
+                                <div class="col-2 col-3-md">
                                     <div class="card">
                                         <div class="playlist">
                                             <img src="/img/stranger.jpeg" alt="playlist.jpg">
@@ -100,7 +100,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-2">
+                                <div class="col-2 col-3-md">
                                     <div class="card">
                                         <div class="playlist">
                                             <img src="/img/aquietplace.jpeg" alt="playlist.jpg">
@@ -111,7 +111,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-2">
+                                <div class="col-2 col-3-md">
                                     <div class="card">
                                         <div class="playlist">
                                             <img src="/img/split.jpeg" alt="playlist.jpg">
@@ -122,7 +122,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-2">
+                                <div class="col-2 col-3-md">
                                     <div class="card">
                                         <div class="playlist">
                                             <img src="/img/cure.jpeg" alt="playlist.jpg">
@@ -133,7 +133,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-2">
+                                <div class="col-2 col-3-md">
                                     <div class="card">
                                         <div class="playlist">
                                             <img src="/img/sinister.jpeg" alt="playlist.jpg">
@@ -141,6 +141,58 @@
                                         <div class="info">
                                             <h3>Sinister</h3>
                                             <span class="singer">Subtitle</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="suggested">
+                            <h2>Creato per John Doe</h2>
+                            <span>Più ascolti, più accurati saranno i suggerimenti</span>
+                            <div class="row d-flex">
+                                <div class="col-2">
+                                    <div class="card">
+                                        <div class="playlist">
+                                            <img src="/img/radar.jpeg" alt="playlist.jpg">
+                                        </div>
+                                        <div class="info">
+                                            <h3>Release Radar   </h3>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-2">
+                                    <div class="card">
+                                        <div class="playlist">
+                                            <img src="/img/mixdaily.jpeg" alt="playlist.jpg">
+                                        </div>
+                                        <div class="info">
+                                            <h3>Daily Mix 1</h3>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="artists">
+                            <h2>Artisti più popolari</h2>
+                            <span>Più ascolti, più accurati saranno i suggerimenti</span>
+                            <div class="row d-flex">
+                                <div class="col-2">
+                                    <div class="card">
+                                        <div class="playlist">
+                                            <img src="/img/youg.jpeg">
+                                        </div>
+                                        <div class="info">
+                                            <h3>Lana Del Rey</h3>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-2">
+                                    <div class="card">
+                                        <div class="playlist">
+                                            <img src="/img/einaudi.jpeg" alt="playlist.jpg">
+                                        </div>
+                                        <div class="info">
+                                            <h3>Ludovico Einaudi</h3>
                                         </div>
                                     </div>
                                 </div>
