Enhance playbar layout and styles, adding album details and control elements

--- a/index.html
+++ b/index.html
@@ -198,16 +198,50 @@
                                 </div>
                             </div>
                         </div>
-
                     </div>
-                    <!-- <div class="music">
-                        <h2>CREATO PER JOHN DOE</h2>
-                    </div> -->
                 </div>
             </div>
         </div>
-        <div class="playbar">
-
+        <div class="playbar d-flex">
+            <div class="left d-flex">
+                <div class="album d-flex">
+                    <img src="./img/sinister.jpeg" alt="song.jpeg">
+                    <div class="nome">
+                        <h4>Sinister</h4>
+                        <span>Brano Nome</span>
+                    </div>
+                </div>
+                <div class="save d-flex">
+                    <i class="fa-regular fa-heart" style="color: #a3a3a3;"></i>
+                    <i class="fa-regular fa-folder" style="color: #a3a3a3;"></i>
+                </div>
+            </div>
+            <div class="center">
+                <div class="control d-flex">
+                    <i class="fa-solid fa-shuffle" style="color: #ffffff;"></i>
+                    <i class="fa-solid fa-backward-step" style="color: #ffffff;"></i>
+                    <i id="play" class="fa-regular fa-circle-play" style="color: #ffffff;"></i>
+                    <i class="fa-solid fa-forward-step" style="color: #ffffff;"></i>
+                    <i class="fa-solid fa-rotate-right" style="color: #ffffff;"></i>    
+                </div>
+                <div class="time d-flex">
+                    <span>0:25</span>
+                    <div id="song" class="bar">
+                        <div class="seconds"></div>
+                    </div>
+                    <span>4:35</span>
+                </div>
+            </div>
+            <div class="right d-flex">
+                <div class="listen d-flex">
+                    <i class="fa-solid fa-list" style="color: #ffffff;"></i>
+                    <i class="fa-solid fa-desktop" style="color: #ffffff;"></i>
+                    <i class="fa-solid fa-volume-high" style="color: #ffffff;"></i>
+                </div>
+                <div id="volume" class="bar">
+                    <div class="value"></div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
