--- a/index.html
+++ b/index.html
@@ -68,7 +68,10 @@
                 <div class="main">
                     <div class="menu">
                         <ul class="categories d-flex">
-                            <li id="selected_B">IN EVIDENZA</li>
+                            <li id="selected_B">
+                                IN EVIDENZA
+                                <div class="green_underline"></div>
+                            </li>
                             <li>PODCAST</li>
                             <li>CLASSIFICHE</li>
                             <li>GENERI E MOOD</li>
@@ -257,7 +260,8 @@
                 <div class="time d-flex">
                     <span>0:25</span>
                     <div id="song" class="bar">
-                        <div class="seconds"></div>
+                        <div class="seconds">
+                        </div>
                     </div>
                     <span>4:35</span>
                 </div>
