Enhance UI with new styles for selected elements and add circle indicator to volume control

--- a/index.html
+++ b/index.html
@@ -271,7 +271,9 @@
                     <i class="fa-solid fa-volume-high" style="color: #ffffff;"></i>
                 </div>
                 <div id="volume" class="bar">
-                    <div class="value"></div>
+                    <div class="value">
+                        <div class="circle"></div>
+                    </div>
                 </div>
             </div>
         </div>
