Refactor volume control styles and update circle indicator for improved UI consistency

--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
                     <span>0:25</span>
                     <div id="song" class="bar">
                         <div class="seconds">
+                            <div class="circle-volume"></div>
                         </div>
                     </div>
                     <span>4:35</span>
@@ -272,7 +273,7 @@
                 </div>
                 <div id="volume" class="bar">
                     <div class="value">
-                        <div class="circle"></div>
+                        <div class="circle-volume"></div>
                     </div>
                 </div>
             </div>
