Refactor playlist elements to enhance styling and structure with new circle design

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                             <div class="row d-flex">
                                 <div class="col-2 col-3-md col-6-s">
                                     <div class="card">
-                                        <div class="playlist">
+                                        <div class="playlist-circle">
                                             <div class="overlay"></div>
                                             <i id="play" class="fa-regular fa-circle-play" style="color: #ffffff;"></i>
                                             <img src="/img/youg.jpeg">
@@ -216,7 +216,7 @@
                                 </div>
                                 <div class="col-2 col-3-md col-6-s">
                                     <div class="card">
-                                        <div class="playlist">
+                                        <div class="playlist-circle">
                                             <div class="overlay"></div>
                                             <i id="play" class="fa-regular fa-circle-play" style="color: #ffffff;"></i>
                                             <img src="/img/einaudi.jpeg" alt="playlist.jpg">
